--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "stylelint-scss": "^3.21.0"
   },
   "dependencies": {
-    "intl-messageformat-parser": "^6.4.4"
+    "@formatjs/icu-messageformat-parser": "^2.7.0",
+    "@sentry/node": "^7.77.0",
+    "har-validator": "^5.1.5",
+    "intl-messageformat-parser": "^6.4.4",
+    "uuid": "^9.0.1"
   }
 }
